--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Kita</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
